<resources>
    <string name="app_name">Ecommerce</string>

    <string name="sigmup">Sign Up</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About Devrlopers</string>
    <string name="share">Share</string>
    <string name="lang">Language</string>
    <string name="out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>

</resources>
